# formly

./: Cargo.toml  README.md  SYNTAX.md  db.sqlite
src/: datatypes.rs  login.rs  main.rs  parser.rs  session.rs  signup.rs  templates.rs
src/routes/: dashboard.rs  forms.rs  index.rs  login.rs  logout.rs  mod.rs  signup.rs
src/routes/dashboard/: dashboard.rs  forms.rs  mod.rs
static/: create.css  dashboard.css  form.css  login.css  style.css  submissions.css
templates/: create.html  dashboard.html  edit.html  form.html  index.html  login.html  signup.html  submissions.html
