[package]
name = "authly"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
askama = "0.14.0"
axum = { version = "0.8.4", features = ["json"] }
base64 = "0.22.1"
hex = "0.4.3"
hmac = "0.12.1"
rand = "0.9.2"
regex = "1.11.1"
serde = "1.0.219"
serde_json = "1.0.142"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
